--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste - github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Richard Matheus</h1>
+    <h2>Senai-Jandira</h2>
 </body>
 </html>
